fix spacing in header

--- a/main.css
+++ b/main.css
@@ -54,7 +54,7 @@ table {
 header {
     width: 95%;
     padding-top: 1em;
-    padding-left: 1em;
+    padding-left: .5em;
     display: flex;
     justify-content: space-between;
     font-family: "Roboto", sans-serif;
@@ -68,7 +68,6 @@ a {
 header nav {
     display: flex;
     align-items: baseline;
-    padding-right: 1em;
 }
 
 .hidden {
@@ -83,15 +82,14 @@ nav > li {
 
 div {
     margin: 0 auto;
-    width: 90%;
-     
+    width: 95%;
 }
 
 .duchamp {
     margin: 0;
     margin: 0 auto;
-    padding:.5em;
-    width: 90%;
+    padding: 1.5em .5em;
+    width: 95%;
 }
 
 p {
